--- a/arch/arm64/boot/dts/rockchip/rk3308-evb.dts
+++ b/arch/arm64/boot/dts/rockchip/rk3308-evb.dts
@@ -19,7 +19,7 @@
 
 	adc-keys0 {
 		compatible = "adc-keys";
-	//	io-channels = <&saradc 0>;
+		io-channels = <&saradc 0>;
 		io-channel-names = "buttons";
 		poll-interval = <100>;
 		keyup-threshold-microvolt = <1800000>;
@@ -33,7 +33,7 @@
 
 	adc-keys1 {
 		compatible = "adc-keys";
-//		io-channels = <&saradc 1>;
+		io-channels = <&saradc 1>;
 		io-channel-names = "buttons";
 		poll-interval = <100>;
 		keyup-threshold-microvolt = <1800000>;
@@ -557,10 +557,10 @@
 	status = "okay";
 };
 
-/*&saradc {
+&saradc {
 	status = "okay";
 	vref-supply = <&vcc_1v8>;
-};*/
+};
 
 &sdmmc {
 	bus-width = <4>;
@@ -601,7 +601,8 @@
 };
 
 &pwm0 {
-	status = "disabled";
+	status = "okay";
+
 	pinctrl-names = "active";
 	pinctrl-0 = <&pwm0_pin_pull_down>;
 };
