--- a/arch/arm64/boot/dts/rockchip/rk3308.dtsi
+++ b/arch/arm64/boot/dts/rockchip/rk3308.dtsi
@@ -120,11 +120,11 @@
 			opp-microvolt = <1025000 1025000 1340000>;
 			clock-latency-ns = <40000>;
 		};
-/*		opp-1008000000 {
+		opp-1008000000 {
 			opp-hz = /bits/ 64 <1008000000>;
 			opp-microvolt = <1125000 1125000 1340000>;
 			clock-latency-ns = <40000>;
-		};*/
+		};
 	};
 
 	arm-pmu {
