--- a/arch/arm64/boot/dts/rockchip/rk3308-evb.dts
+++ b/arch/arm64/boot/dts/rockchip/rk3308-evb.dts
@@ -14,6 +14,7 @@
 
 	chosen {
 		stdout-path = "serial4:1500000n8";
+		bootargs = "earlycon=uart8250,mmio32,0xff0e0000 swiotlb=1 console=ttyS0,1500000 clk_ignore_unused";
 	};
 
 	adc-keys0 {
